# tudu

./: .gitignore  LICENSE  README.md
client/: README.md  index.html  package.json
client/src/: App.jsx  main.css  main.jsx
client/src-tauri/: tauri.conf.json
client/src/assets/: Form.css
client/src/components/: Header.jsx  MainContent.jsx  NavBar.jsx  SideBar.jsx
client/src/views/: Dashboard.css  Dashboard.jsx  Home.css  Home.jsx  Login.jsx  Register.jsx
server/: .example.env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  wait-for-db.sh
server/migrations/2025-03-10-032114_create_users_projects_tasks/: up.sql
server/migrations/2025-03-10-032207_create_teams_and_members/: down.sql  up.sql
server/migrations/2025-03-10-032304_create_comments_documents/: down.sql  up.sql
server/migrations/2025-03-10-032350_create_tags_and_relations/: down.sql  up.sql
server/migrations/2025-03-10-032439_create_document_history_notifications/: down.sql  up.sql
server/migrations/2025-03-10-032542_create_calendar_attachments_roles/: down.sql  up.sql
server/src/: auth.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
server/src/handlers/: mod.rs  project.rs  teams.rs  user.rs
server/src/models/: attachment.rs  calendar.rs  comment.rs  document.rs  mod.rs  notification.rs  project.rs  task.rs  team.rs  user.rs
