[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version="2.2.8", features= ["mysql", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"]}
tower-http = { version = "0.6.2", features = ["full"]}
jsonwebtoken = "9.3.1"
argon2 = { version = "0.5.3", features = ["std"]}
rand = "0.9.0"
